--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-VantomKernel"
+CONFIG_LOCALVERSION="-VantomBE"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 # CONFIG_AUDIT is not set
